--- a/packages/octopus-fig/package.json
+++ b/packages/octopus-fig/package.json
@@ -6,15 +6,13 @@
   "scripts": {
     "bundle": "yarn run bundle:web",
     "bundle:web": "vite build -c vite.web.js && vite build -c vite.web.worker.js",
-    "build": "rimraf ./dist && node build.js ./tsconfig.json",
+    "build": "rimraf ./dist && tsc --build tsconfig.json && node esm.js ./tsconfig.json",
     "clean:workdir": "rimraf ./workdir/*",
     "convert:squid:debug": "ts-node ./examples/node/convert-plugin-squid-debug.ts",
     "convert:squid:local": "ts-node ./examples/node/convert-plugin-squid-local.ts",
     "clean": "rimraf ./node_modules ./dist ./workdir ./test/integration/report",
     "convert:api:debug": "ts-node ./examples/node/convert-api-debug.ts",
     "convert:api:local": "ts-node ./examples/node/convert-api-local.ts",
-    "convert:source:debug": "ts-node ./examples/node/convert-plugin-source-debug.ts",
-    "convert:source:local": "ts-node ./examples/node/convert-plugin-source-local.ts",
     "prepack": "yarn run build",
     "test": "yarn test:unit && yarn test:integration",
     "test:unit": "yarn jest",
