--- a/packages/octopus-ai/package.json
+++ b/packages/octopus-ai/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "convert:debug": "ts-node ./examples/node/convert-debug.ts",
     "convert:local": "ts-node ./examples/node/convert-local.ts",
-    "build": "rimraf ./dist && node build.js ./tsconfig.json",
+    "build": "rimraf ./dist && tsc --build tsconfig.json && node esm.js ./tsconfig.json",
     "clean": "rimraf ./node_modules ./dist ./workdir ./docs",
     "types:check": "tsc --noEmit",
     "watch": "tsc -w",
