--- a/packages/octopus-psd/package.json
+++ b/packages/octopus-psd/package.json
@@ -4,7 +4,7 @@
   "description": "Octopus PSD converter, converts .psd files to Octopus 3+ format.",
   "license": "Apache-2.0",
   "scripts": {
-    "build": "rimraf ./dist && node build.js ./tsconfig.json",
+    "build": "rimraf ./dist && tsc --build tsconfig.json && node esm.js ./tsconfig.json",
     "clean:workdir": "rimraf ./workdir/*",
     "clean": "rimraf ./node_modules ./dist ./dist ./workdir ./test/integration/report ./jsdoc",
     "convert:debug": "yarn build && node ./dist/examples/node/convert-debug.js",
