--- a/packages/figma-plugins/preview-exporter/manifest.json
+++ b/packages/figma-plugins/preview-exporter/manifest.json
@@ -3,6 +3,6 @@
   "id": "1206274224746282691",
   "api": "1.0.0",
   "editorType": ["figma"],
-  "main": "dist/code.js",
+  "main": "dist/main.js",
   "ui": "dist/index.html"
 }
