--- a/packages/figma-plugins/squid/package.json
+++ b/packages/figma-plugins/squid/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "@opendesign/figma-plugin-preview-exporter",
-  "version": "3.0.0-rc.1",
-  "description": "Figma Plugin Preview Exporter",
+  "name": "@opendesign/figma-plugin-squid",
+  "version": "3.0.0-rc.2",
+  "description": "Figma Plugin Squid",
   "license": "Apache-2.0",
   "scripts": {
     "clean": "rimraf ./node_modules ./lib ./dist",
     "lint": "echo 'Linting is not implemented yet'",
     "test": "echo 'Tests are not implemented yet'",
     "tsc": "yarn tsc:main && yarn tsc:ui",
-    "tsc:main": "tsc --noEmit -p src/plugin",
+    "tsc:main": "tsc --noEmit -p src/main",
     "tsc:ui": "tsc --noEmit -p src/ui",
     "tsc:watch": "concurrently -n widget,iframe \"yarn tsc:main -- --watch --preserveWatchOutput\" \"yarn tsc:ui -- --watch --preserveWatchOutput\"",
     "build": "yarn build:ui && yarn build:main",
-    "build:main": "esbuild src/plugin/code.ts --bundle --outfile=dist/code.js",
+    "build:main": "esbuild src/main/index.ts --bundle --outfile=dist/main.js",
     "build:ui": "vite build --minify esbuild --emptyOutDir=false",
     "build:watch": "concurrently -n widget,iframe \"yarn build:main -- --watch\" \"yarn build:ui -- --watch\"",
     "dev": "concurrently -n tsc,build,vite 'npm:tsc:watch' 'npm:build:watch' 'vite'"
   },
   "dependencies": {
-    "buffer": "^6.0.3",
+    "@opendesign/figma-plugin-common": "3.0.0-rc.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
@@ -38,6 +38,5 @@
   },
   "files": [
     "dist"
-  ],
-  "main": "dist/code.js"
+  ]
 }
