--- a/packages/figma-plugins/preview-exporter/package.json
+++ b/packages/figma-plugins/preview-exporter/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@opendesign/figma-plugin-common": "3.0.0-rc.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
