--- a/packages/octopus-fig/package.json
+++ b/packages/octopus-fig/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@opendesign/octopus-fig",
-  "version": "3.0.0-rc.28",
+  "version": "3.0.0-rc.28-tarpub4",
   "description": "Figma HTTP API format to Octopus 3+ converter.",
   "license": "Apache-2.0",
   "scripts": {
     "bundle": "yarn run bundle:web",
     "bundle:web": "vite build -c vite.web.js && vite build -c vite.web.worker.js",
-    "build": "rimraf ./dist && tsc --build tsconfig.json && node esm.js ./tsconfig.json",
+    "build": "rimraf ./dist && yarn build:node && yarn build:web",
+    "build:node": "rollup -c rollup.config.node.mjs",
+    "build:web": "rollup -c rollup.config.web.mjs",
     "clean:workdir": "rimraf ./workdir/*",
     "convert:squid:debug": "ts-node ./examples/node/convert-plugin-squid-debug.ts",
     "convert:squid:local": "ts-node ./examples/node/convert-plugin-squid-local.ts",
@@ -25,7 +27,8 @@
     "test:integration:squid:update": "ts-node test/integration/squid-plugin/update-tests.ts",
     "types:check": "tsc --noEmit",
     "typedoc": "typedoc --excludePrivate src/index-node.ts src/index-web.ts",
-    "watch": "tsc -w"
+    "watch": "rimraf ./dist && tsc -w",
+    "release": "yarn build:node && yarn build:web && node ./prepare-release.mjs && yarn publish release.tgz"
   },
   "dependencies": {
     "@opendesign/figma-parser": "3.0.0-rc.17",
@@ -44,6 +47,8 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@types/chalk": "^2.2.0",
     "@types/jest": "^27.4.0",
     "@types/node": "*",
@@ -56,14 +61,17 @@
     "jest": "^27.3.1",
     "jsondiffpatch": "^0.4.1",
     "rimraf": "^3.0.2",
+    "rollup": "^3.15.0",
+    "rollup-plugin-dts": "^5.2.0",
+    "tar": "^6.1.13",
     "ts-jest": "^27.1.3",
     "ts-node": "10.8.0",
+    "tslib": "^2.5.0",
     "typedoc": "^0.23.18",
-    "typescript": "4.7.4"
+    "typescript": "4.9.5"
   },
   "files": [
-    "dist/src",
-    "dist/package.json"
+    "dist"
   ],
   "module": "./dist/src/index-node.mjs",
   "main": "./dist/src/index-node.js",
@@ -71,11 +79,12 @@
     ".": {
       "node": {
         "require": "./dist/src/index-node.js",
-        "import": "./dist/src/index-node.mjs"
+        "import": "./dist/src/index-node.mjs",
+        "types": "./dist/src/index-node.d.ts"
       },
       "default": {
-        "require": "./dist/src/index-web.js",
-        "import": "./dist/src/index-web.mjs"
+        "import": "./dist/src/index-web.mjs",
+        "types": "./dist/src/index-web.d.mts"
       }
     }
   }
