--- a/packages/octopus-fig/package.json
+++ b/packages/octopus-fig/package.json
@@ -5,7 +5,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "bundle": "yarn run bundle:web",
-    "bundle:web": "npx vite build -c vite.web.js && npx vite build -c vite.web.worker.js",
+    "bundle:web": "vite build -c vite.web.js && vite build -c vite.web.worker.js",
     "build": "tsc --build ./tsconfig.json",
     "clean:workdir": "rimraf ./workdir/*",
     "clean": "rimraf ./node_modules ./lib ./dist ./workdir ./test/**/report",
@@ -58,7 +58,8 @@
     "ts-jest": "^27.1.3",
     "ts-node": "10.8.0",
     "typedoc": "^0.23.18",
-    "typescript": "4.6.4"
+    "typescript": "4.6.4",
+    "vite": "^4.1.4"
   },
   "files": [
     "lib/src",
