fix webtoon/psd-ts importing (node/nodenext compat)

--- a/packages/octopus-psd/package.json
+++ b/packages/octopus-psd/package.json
@@ -19,7 +19,7 @@
     "convert:local": "yarn build && node ./dist/examples/node/convert-local.js",
     "prepack": "yarn run build",
     "test": "yarn test:unit && yarn test:integration",
-    "test:unit": "yarn build && yarn node --experimental-vm-modules $(yarn bin jest)",
+    "test:unit": "yarn jest",
     "test:integration": "yarn build && node dist/test/integration/index.js",
     "test:integration:update": "yarn build && node dist/test/integration/update-tests.js",
     "types:check": "tsc --noEmit",
@@ -32,6 +32,7 @@
     "@opendesign/octopus-common": "3.0.0-rc.30",
     "@opendesign/octopus-ts": "3.0.1",
     "@types/lodash": "^4.14.178",
+    "@types/rimraf": "^3.0.2",
     "@types/uuid": "^8.3.1",
     "@webtoon/psd-ts": "npm:@opendesign/psd-ts@0.5.1-experimental-release-20230222",
     "chalk": "^4.1.2",
@@ -52,11 +53,13 @@
     "@types/node": "*",
     "@types/pino-pretty": "4.7.5",
     "@types/pino-std-serializers": "2.4.1",
+    "enhanced-resolve": "^5.12.0",
     "handlebars": "^4.7.7",
     "jest": "^27.3.1",
     "jsondiffpatch": "^0.4.1",
     "tar": "^6.1.13",
     "ts-jest-resolver": "^2.0.0",
+    "ts-jest": "^27.1.3",
     "typedoc": "^0.23.18",
     "typescript": "4.9.5",
     "vite": "^4.1.4",
