--- a/packages/octopus-psd/tsconfig.json
+++ b/packages/octopus-psd/tsconfig.json
@@ -10,7 +10,7 @@
     "experimentalDecorators": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "moduleResolution": "nodenext",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "allowJs": true,
     "skipLibCheck": true,
