--- a/packages/octopus-psd/package.json
+++ b/packages/octopus-psd/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opendesign/octopus-psd",
-  "version": "3.1.0-rc.6",
+  "version": "3.1.0-rc.7",
   "description": "Octopus PSD converter, converts .psd files to Octopus 3+ format.",
   "license": "Apache-2.0",
   "scripts": {
@@ -19,7 +19,7 @@
     "convert:local": "yarn build && node ./dist/examples/node/convert-local.js",
     "prepack": "yarn run build",
     "test": "yarn test:unit && yarn test:integration",
-    "test:unit": "yarn jest",
+    "test:unit": "vitest run",
     "test:integration": "yarn build && node dist/test/integration/index.js",
     "test:integration:update": "yarn build && node dist/test/integration/update-tests.js",
     "types:check": "tsc --noEmit",
@@ -27,7 +27,7 @@
     "watch": "rimraf ./dist && tsc -w"
   },
   "dependencies": {
-    "@opendesign/image-icc-profile-converter": "^0.0.2-experimental",
+    "@opendesign/image-icc-profile-converter": "^0.0.4-experimental",
     "@opendesign/manifest-ts": "3.0.1",
     "@opendesign/octopus-common": "3.0.0-rc.30",
     "@opendesign/octopus-ts": "3.0.1",
@@ -49,21 +49,18 @@
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
-    "@types/jest": "^27.4.0",
     "@types/node": "*",
     "@types/pino-pretty": "4.7.5",
     "@types/pino-std-serializers": "2.4.1",
     "enhanced-resolve": "^5.12.0",
     "handlebars": "^4.7.7",
-    "jest": "^27.3.1",
     "jsondiffpatch": "^0.4.1",
     "tar": "^6.1.13",
-    "ts-jest-resolver": "^2.0.0",
-    "ts-jest": "^27.1.3",
     "typedoc": "^0.23.18",
     "typescript": "4.9.5",
     "vite": "^4.1.4",
-    "vite-plugin-dts": "^2.0.2"
+    "vite-plugin-dts": "^2.0.2",
+    "vitest": "^0.29.1"
   },
   "files": [
     "dist"
