--- a/packages/octopus-ai/package.json
+++ b/packages/octopus-ai/package.json
@@ -25,7 +25,7 @@
     "types:check": "tsc --noEmit",
     "watch": "rimraf ./dist && tsc -w",
     "test": "yarn test:unit && yarn test:integration",
-    "test:unit": "yarn jest",
+    "test:unit": "vitest run",
     "test:integration": "ts-node test/integration/index.ts",
     "test:integration:update": "ts-node test/integration/update-tests.ts",
     "typedoc": "typedoc --excludePrivate src/index.ts",
@@ -36,7 +36,13 @@
     "@opendesign/manifest-ts": "3.0.1",
     "@opendesign/octopus-common": "3.0.0-rc.30",
     "@opendesign/octopus-ts": "3.0.1",
+    "@types/node": "*",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "dotenv": "16.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "lodash": "^4.17.21",
     "paper": "^0.12.15",
     "pino": "^6.7.0",
@@ -46,23 +52,22 @@
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
-    "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.178",
     "@types/node": "*",
-    "@types/pino": "^6.3.3",
+    "@types/pino-pretty": "4.7.5",
+    "@types/pino-std-serializers": "2.4.1",
     "@types/rimraf": "^3.0.2",
     "@types/uuid": "^8.3.1",
     "chalk": "^4.1.2",
     "enhanced-resolve": "^5.12.0",
     "handlebars": "^4.7.7",
-    "jest": "^27.3.1",
     "jsondiffpatch": "^0.4.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typedoc": "^0.23.18",
     "typescript": "4.9.5",
-    "vite": "^4.1.4"
+    "vite": "^4.1.4",
+    "vitest": "^0.29.1"
   },
   "files": [
     "dist"
