--- a/packages/octopus-ai/tsconfig.json
+++ b/packages/octopus-ai/tsconfig.json
@@ -6,11 +6,11 @@
     "rootDir": "./",
     "outDir": "./dist",
     "module": "ESNext",
-    "target": "ES2019",
+    "target": "ESNext",
     "experimentalDecorators": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext",
     "resolveJsonModule": true,
     "allowJs": false,
     "skipLibCheck": true,
