--- a/packages/octopus-ai/package.json
+++ b/packages/octopus-ai/package.json
@@ -1,35 +1,31 @@
 {
   "name": "@opendesign/octopus-ai",
-  "version": "3.0.0-rc.5",
+  "version": "3.0.0-rc.5-tarball-01",
   "description": "Adobe Illustrator to Octopus 3+ format converter.",
   "license": "Apache-2.0",
-  "keywords": [
-    "Octopus 3+",
-    "Node.js",
-    "Adobe Illustrator",
-    "Typescript"
-  ],
   "scripts": {
-    "convert:debug": "ts-node ./examples/node/convert-debug.ts",
-    "convert:local": "ts-node ./examples/node/convert-local.ts",
     "bundle": "yarn run bundle:web",
-    "bundle:web": "build -c vite.web-test.js",
+    "bundle:web": "vite build -c vite.web-test.js",
     "build": "rimraf ./dist && tsc --build tsconfig.json",
-    "release:bundle:node": "vite build -c vite.node.js",
     "release:bundle:web": "vite build -c vite.web.js",
+    "release:bundle:node": "vite build -c vite.node.js",
     "release:bundle": "yarn release:bundle:node && yarn release:bundle:web",
     "release:cleanup": "rimraf ./release ./release.tgz",
     "release:publish": "yarn publish release.tgz --non-interactive --ignore-scripts",
     "release": "yarn release:bundle && node ./prepare-release.mjs && yarn release:publish && yarn release:cleanup",
+    "release:test": "yarn release:bundle && node ./prepare-release.mjs",
+    "clean:workdir": "rimraf ./workdir/*",
     "clean": "rimraf ./node_modules ./dist ./workdir ./docs",
+    "convert:debug": "ts-node ./examples/node/convert-debug.ts",
+    "convert:local": "ts-node ./examples/node/convert-local.ts",
+    "prepack": "yarn run build",
     "types:check": "tsc --noEmit",
-    "watch": "rimraf ./dist && tsc -w",
     "test": "yarn test:unit && yarn test:integration",
     "test:unit": "vitest run",
     "test:integration": "ts-node test/integration/index.ts",
     "test:integration:update": "ts-node test/integration/update-tests.ts",
     "typedoc": "typedoc --excludePrivate src/index.ts",
-    "prepack": "yarn run build"
+    "watch": "rimraf ./dist && tsc -w"
   },
   "dependencies": {
     "@opendesign/illustrator-parser-pdfcpu": "1.1.2",
@@ -48,7 +44,8 @@
     "pino": "^6.7.0",
     "pino-pretty": "^4.3.0",
     "time-stamp": "^2.2.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "vite-plugin-wasm": "^3.2.1"
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
@@ -63,20 +60,23 @@
     "handlebars": "^4.7.7",
     "jsondiffpatch": "^0.4.1",
     "rimraf": "^3.0.2",
+    "tar": "^6.1.13",
     "ts-node": "^10.4.0",
     "typedoc": "^0.23.18",
     "typescript": "4.9.5",
     "vite": "^4.1.4",
+    "vite-plugin-dts": "^2.0.2",
+    "vite-plugin-top-level-await": "^1.3.0",
     "vitest": "^0.29.1"
   },
   "files": [
     "dist"
   ],
   "type": "module",
-  "module": "./dist/src/index-node.js",
+  "module": "./dist/src/index-web.js",
   "exports": {
     ".": {
-      "default": "./dist/src/index-node.js"
+      "default": "./dist/src/index-web.js"
     }
   }
 }
