--- a/packages/octopus-ai/package.json
+++ b/packages/octopus-ai/package.json
@@ -5,7 +5,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "bundle": "yarn run bundle:web",
-    "bundle:web": "vite build -c vite.web-test.js",
+    "bundle:web": "vite build -c ./examples/web/vite.web-test.js",
     "build": "rimraf ./dist && tsc --build tsconfig.json",
     "release:bundle:web": "vite build -c vite.web.js",
     "release:bundle:node": "vite build -c vite.node.js",
