--- a/packages/octopus-fig/package.json
+++ b/packages/octopus-fig/package.json
@@ -11,18 +11,18 @@
     "clean": "rimraf ./node_modules ./lib ./dist ./workdir ./test/**/report",
     "convert:api:debug": "ts-node ./examples/node/convert-api-debug.ts",
     "convert:api:local": "ts-node ./examples/node/convert-api-local.ts",
-    "convert:squid:debug": "ts-node ./examples/node/convert-plugin-squid-debug.ts",
-    "convert:squid:local": "ts-node ./examples/node/convert-plugin-squid-local.ts",
+    "convert:plugin:debug": "ts-node ./examples/node/convert-plugin-debug.ts",
+    "convert:plugin:local": "ts-node ./examples/node/convert-plugin-local.ts",
     "prepack": "rimraf ./lib && yarn run build",
     "test": "yarn test:unit && yarn test:integration",
     "test:unit": "yarn jest",
-    "test:integration": "yarn test:integration:parser && yarn test:integration:squid",
+    "test:integration": "yarn test:integration:parser && yarn test:integration:plugin",
     "test:integration:parser": "ts-node test/integration/figma-parser",
     "test:integration:parser:update": "yarn test:integration:parser:update:assets && yarn test:integration:parser:update:tests",
     "test:integration:parser:update:assets": "ts-node test/integration/figma-parser/update-assets.ts",
     "test:integration:parser:update:tests": "ts-node test/integration/figma-parser/update-tests.ts",
-    "test:integration:squid": "ts-node test/integration/squid-plugin",
-    "test:integration:squid:update": "ts-node test/integration/squid-plugin/update-tests.ts",
+    "test:integration:plugin": "ts-node test/integration/squid-plugin",
+    "test:integration:plugin:update": "ts-node test/integration/squid-plugin/update-tests.ts",
     "types:check": "tsc --noEmit",
     "typedoc": "typedoc --excludePrivate src/index-node.ts src/index-web.ts",
     "watch": "tsc -w"
