--- a/packages/octopus-fig/package.json
+++ b/packages/octopus-fig/package.json
@@ -23,12 +23,12 @@
     "test": "yarn test:unit && yarn test:integration",
     "test:unit": "yarn jest",
     "test:integration": "yarn test:integration:parser && yarn test:integration:squid",
-    "test:integration:parser": "ts-node --esm test/integration/figma-parser/index.ts",
+    "test:integration:parser": "ts-node test/integration/figma-parser/index.ts",
     "test:integration:parser:update": "yarn test:integration:parser:update:assets && yarn test:integration:parser:update:tests",
-    "test:integration:parser:update:assets": "ts-node --esm test/integration/figma-parser/update-assets.ts",
-    "test:integration:parser:update:tests": "ts-node --esm test/integration/figma-parser/update-tests.ts",
-    "test:integration:squid": "ts-node --esm test/integration/squid-plugin",
-    "test:integration:squid:update": "ts-node --esm test/integration/squid-plugin/update-tests.ts",
+    "test:integration:parser:update:assets": "ts-node test/integration/figma-parser/update-assets.ts",
+    "test:integration:parser:update:tests": "ts-node test/integration/figma-parser/update-tests.ts",
+    "test:integration:squid": "ts-node test/integration/squid-plugin",
+    "test:integration:squid:update": "ts-node test/integration/squid-plugin/update-tests.ts",
     "types:check": "tsc --noEmit",
     "typedoc": "typedoc --excludePrivate src/index-node.ts src/index-web.ts",
     "watch": "rimraf ./dist && tsc -w"
