--- a/packages/octopus-ai/package.json
+++ b/packages/octopus-ai/package.json
@@ -33,21 +33,20 @@
     "@opendesign/octopus-common": "3.0.0-rc.30",
     "@opendesign/octopus-ts": "3.0.1",
     "@types/node": "*",
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
     "dotenv": "16.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "lodash": "^4.17.21",
     "paper": "^0.12.15",
     "pino": "^6.7.0",
     "pino-pretty": "^4.3.0",
     "time-stamp": "^2.2.0",
-    "uuid": "^8.3.2",
-    "vite-plugin-wasm": "^3.2.1"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "@types/chalk": "^2.2.0",
     "@types/lodash": "^4.14.178",
     "@types/node": "*",
@@ -60,13 +59,11 @@
     "handlebars": "^4.7.7",
     "jsondiffpatch": "^0.4.1",
     "rimraf": "^3.0.2",
-    "tar": "^6.1.13",
     "ts-node": "^10.4.0",
     "typedoc": "^0.23.18",
     "typescript": "4.9.5",
     "vite": "^4.1.4",
     "vite-plugin-dts": "^2.0.2",
-    "vite-plugin-top-level-await": "^1.3.0",
     "vitest": "^0.29.1"
   },
   "files": [
