--- a/packages/octopus-ai/package.json
+++ b/packages/octopus-ai/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opendesign/octopus-ai",
-  "version": "3.0.0-rc.5-tarball-05",
+  "version": "3.0.0-rc.5-tarball-06",
   "description": "Adobe Illustrator to Octopus 3+ format converter.",
   "license": "Apache-2.0",
   "scripts": {
@@ -26,7 +26,7 @@
     "test:integration:update": "ts-node test/integration/update-tests.ts",
     "typedoc": "typedoc --excludePrivate src/index.ts",
     "watch": "rimraf ./dist && tsc -w",
-    "prepublish": "echo \"Please use 'yarn release' to publish new version\" && exit 1"
+    "prepublishOnly": "echo \"Please use 'yarn release' to publish new version\" && exit 1"
   },
   "dependencies": {
     "@opendesign/illustrator-parser-pdfcpu": "1.1.2",
@@ -39,6 +39,7 @@
     "paper": "^0.12.15",
     "pino": "^6.7.0",
     "pino-pretty": "^4.3.0",
+    "tar": "^6.1.13",
     "time-stamp": "^2.2.0",
     "uuid": "^8.3.2"
   },
