illustrator npm build ci
dont run the verify job for draft prs

add cache to the big verify action and can be enabled using label

--- a/packages/octopus-ai/package.json
+++ b/packages/octopus-ai/package.json
@@ -58,5 +58,9 @@
   "files": [
     "lib/src",
     "lib/package.json"
-  ]
+  ],
+  "repository": "https://github.com/opendesigndev/octopus",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  }
 }
