--- a/package.json
+++ b/package.json
@@ -42,5 +42,9 @@
     "prettier": "2.5.1",
     "rimraf": "^3.0.2",
     "typescript": "4.6.4"
+  },
+  "repository": "https://github.com/opendesigndev/octopus",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   }
 }
