--- a/packages/octopus-ai/package.json
+++ b/packages/octopus-ai/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opendesign/octopus-ai",
-  "version": "3.0.0-rc.5-tarball-06",
+  "version": "3.0.0-rc-experimental-3",
   "description": "Adobe Illustrator to Octopus 3+ format converter.",
   "license": "Apache-2.0",
   "scripts": {
