--- a/packages/octopus-ai/tsconfig.json
+++ b/packages/octopus-ai/tsconfig.json
@@ -14,10 +14,10 @@
     "resolveJsonModule": true,
     "allowJs": false,
     "skipLibCheck": true,
-    "lib": ["es2019", "ES2015.Proxy", "dom"],
+    "lib": ["es2019", "ES2015.Proxy", "dom"]
   },
   "ts-node": {
     "esm": true
-},
+  },
   "include": ["src", "test", "examples"]
 }
