--- a/.github/workflows/build-illustrator.yml
+++ b/.github/workflows/build-illustrator.yml
@@ -12,30 +12,8 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-          cache: 'yarn'
-          registry-url: 'https://registry.npmjs.org'
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - name: whoami
-        run: |
-          npm whoami
-      - name: install
-        run: |
-          yarn workspace @opendesign/octopus-common install --frozen-lockfile
-          yarn workspace @opendesign/octopus-ai install --frozen-lockfile
-      - name: build
-        run: |
-          yarn workspace @opendesign/octopus-common build
-          yarn workspace @opendesign/octopus-ai build
-      - name: publish in PR
-        if: github.event_name == 'pull_request'
-        run: |
-          SHORT_SHA=`echo ${{ github.sha }} | cut -c1-8`
-          yarn workspace @opendesign/octopus-ai version --no-git-tag-version --new-version "3.0.0-experimental-$GITHUB_HEAD_REF-$SHORT_SHA"
-          yarn workspace @opendesign/octopus-ai publish --tag experimental
+    uses: ./.github/actions/build.yml
+    with: 
+      package-name: '@opendesign/octopus-ai'
+    secrets:
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
