--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -5,7 +5,7 @@ on:
         required: true
         type: string
       base-version:
-        required: true
+        required: false
         type: string
         default: '3.0.0'
     secrets:
@@ -16,6 +16,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: '18.x'
