--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           yarn build
       - name: publish in PR
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'publish-experimental')
         run: |
           SHORT_SHA=`echo ${{ github.sha }} | cut -c1-8`
           yarn workspace ${{ inputs.package-name }} version --no-git-tag-version --new-version "${{ inputs.base-version }}-experimental-$GITHUB_HEAD_REF-$SHORT_SHA"
