--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   verify:
     if: |
-      (github.event_name == 'pull_request' && (github.event.pull_request.draft == false || contains(github.event.pull_request.labels.*.name, 'run-verify'))) || github.event_name == 'push'
+      (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'run-verify')) || github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
