--- a/packages/octopus-fig/package.json
+++ b/packages/octopus-fig/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opendesign/octopus-fig",
-  "version": "3.0.0-rc.32",
+  "version": "3.0.0-rc.32-umd",
   "description": "Figma HTTP API format to Octopus 3+ converter.",
   "license": "Apache-2.0",
   "scripts": {
@@ -9,14 +9,16 @@
     "build": "rimraf ./dist && tsc --build tsconfig.json",
     "release:bundle:node": "vite build -c vite.node.js",
     "release:bundle:web": "vite build -c vite.web.js",
-    "release:bundle": "yarn release:bundle:node && yarn release:bundle:web",
+    "release:bundle:web-umd": "vite build -c vite.web-umd.js",
+    "release:bundle": "yarn release:bundle:node && yarn release:bundle:web && yarn release:bundle:web-umd",
     "release:cleanup": "rimraf ./release ./release.tgz",
     "release:publish": "yarn publish release.tgz --non-interactive --ignore-scripts",
-    "release": "yarn release:bundle && node ./prepare-release.mjs && yarn release:publish && yarn release:cleanup",
+    "release:prepare": "node ./prepare-release.mjs",
+    "release": "yarn release:bundle && yarn release:prepare && yarn release:publish && yarn release:cleanup",
     "clean:workdir": "rimraf ./workdir/*",
     "convert:squid:debug": "ts-node ./examples/node/convert-plugin-squid-debug.ts",
     "convert:squid:local": "ts-node ./examples/node/convert-plugin-squid-local.ts",
-    "clean": "rimraf ./node_modules ./dist ./workdir ./test/integration/report",
+    "clean": "rimraf ./node_modules ./dist ./workdir ./test/integration/report ./release ./release.tgz",
     "convert:api:debug": "ts-node ./examples/node/convert-api-debug.ts",
     "convert:api:local": "ts-node ./examples/node/convert-api-local.ts",
     "prepack": "yarn run build",
