--- a/packages/octopus-fig/package.json
+++ b/packages/octopus-fig/package.json
@@ -11,14 +11,14 @@
     "release:bundle:web": "vite build -c vite.web.js",
     "release:bundle:web-umd": "vite build -c vite.web-umd.js",
     "release:bundle": "yarn release:bundle:node && yarn release:bundle:web && yarn release:bundle:web-umd",
-    "release:cleanup": "rimraf ./release ./release.tgz",
-    "release:publish": "yarn publish release.tgz --non-interactive --ignore-scripts",
+    "release:cleanup": "rimraf ./release",
+    "release:publish": "yarn publish ./release --non-interactive --ignore-scripts",
     "release:prepare": "node ./prepare-release.mjs",
     "release": "yarn release:bundle && yarn release:prepare && yarn release:publish && yarn release:cleanup",
     "clean:workdir": "rimraf ./workdir/*",
     "convert:squid:debug": "ts-node ./examples/node/convert-plugin-squid-debug.ts",
     "convert:squid:local": "ts-node ./examples/node/convert-plugin-squid-local.ts",
-    "clean": "rimraf ./node_modules ./dist ./workdir ./test/integration/report ./release ./release.tgz",
+    "clean": "rimraf ./node_modules ./dist ./workdir ./test/integration/report ./release",
     "convert:api:debug": "ts-node ./examples/node/convert-api-debug.ts",
     "convert:api:local": "ts-node ./examples/node/convert-api-local.ts",
     "prepack": "yarn run build",
@@ -65,7 +65,6 @@
     "jest": "^27.3.1",
     "jsondiffpatch": "^0.4.1",
     "rimraf": "^3.0.2",
-    "tar": "^6.1.13",
     "ts-jest": "^27.1.3",
     "ts-jest-resolver": "^2.0.0",
     "ts-node": "10.8.0",
