update release for fig and psd

--- a/packages/octopus-psd/package.json
+++ b/packages/octopus-psd/package.json
@@ -10,8 +10,8 @@
     "release:bundle:web": "vite build -c vite.web.js",
     "release:bundle:node": "vite build -c vite.node.js",
     "release:bundle": "yarn release:bundle:node && yarn release:bundle:web",
-    "release:cleanup": "rimraf ./release ./release.tgz",
-    "release:publish": "yarn publish release.tgz --non-interactive --ignore-scripts",
+    "release:cleanup": "rimraf ./release",
+    "release:publish": "yarn publish ./release --non-interactive --ignore-scripts",
     "release": "yarn release:bundle && node ./prepare-release.mjs && yarn release:publish && yarn release:cleanup",
     "clean:workdir": "rimraf ./workdir/*",
     "clean": "rimraf ./node_modules ./dist ./workdir ./test/integration/report ./jsdoc",
@@ -56,7 +56,6 @@
     "enhanced-resolve": "^5.12.0",
     "handlebars": "^4.7.7",
     "jsondiffpatch": "^0.4.1",
-    "tar": "^6.1.13",
     "typedoc": "^0.23.18",
     "typescript": "4.9.5",
     "vite": "^4.1.4",
