--- a/packages/octopus-xd/package.json
+++ b/packages/octopus-xd/package.json
@@ -14,8 +14,8 @@
     "release:bundle:node": "vite build -c vite.node.js",
     "release:bundle:web": "vite build -c vite.web.js",
     "release:bundle": "yarn release:bundle:node && yarn release:bundle:web",
-    "release:cleanup": "rimraf ./release ./release.tgz",
-    "release:publish": "yarn publish release.tgz --non-interactive --ignore-scripts",
+    "release:cleanup": "rimraf ./release",
+    "release:publish": "yarn publish ./release --non-interactive --ignore-scripts",
     "release": "yarn release:bundle && node ./prepare-release.mjs && yarn release:publish && yarn release:cleanup",
     "prepack": "yarn run build",
     "watch": "tsc -w",
@@ -54,7 +54,6 @@
     "@types/uuid": "^8.3.1",
     "chalk": "^4.1.2",
     "jest": "^27.3.1",
-    "tar": "^6.1.13",
     "ts-node": "10.5.0",
     "typedoc": "^0.23.18",
     "typescript": "4.9.5",
