--- a/packages/octopus-fig/package.json
+++ b/packages/octopus-fig/package.json
@@ -4,21 +4,19 @@
   "description": "Figma HTTP API format to Octopus 3+ converter.",
   "license": "Apache-2.0",
   "scripts": {
-    "bundle": "yarn run bundle:web",
-    "bundle:web": "vite build -c vite.web-test.js",
     "build": "rimraf ./dist && tsc --build tsconfig.json",
-    "release:bundle:node": "vite build -c vite.node.js",
-    "release:bundle:web": "vite build -c vite.web.js",
-    "release:bundle:web-umd": "vite build -c vite.web-umd.js",
-    "release:bundle": "yarn release:bundle:node && yarn release:bundle:web && yarn release:bundle:web-umd",
+    "bundle:node": "vite build -c vite.node.js",
+    "bundle:web": "vite build -c vite.web.js",
+    "bundle:web-umd": "vite build -c vite.web-umd.js",
+    "bundle": "yarn bundle:node && yarn bundle:web && yarn bundle:web-umd && yarn release:prepare",
     "release:cleanup": "rimraf ./release",
     "release:publish": "yarn publish ./release --non-interactive --ignore-scripts",
     "release:prepare": "node ./prepare-release.mjs",
-    "release": "yarn release:bundle && yarn release:prepare && yarn release:publish && yarn release:cleanup",
+    "release": "yarn bundle && yarn release:publish && yarn release:cleanup",
+    "clean": "rimraf ./node_modules ./dist ./workdir ./test/integration/report ./release",
     "clean:workdir": "rimraf ./workdir/*",
     "convert:squid:debug": "ts-node ./examples/node/convert-plugin-squid-debug.ts",
     "convert:squid:local": "ts-node ./examples/node/convert-plugin-squid-local.ts",
-    "clean": "rimraf ./node_modules ./dist ./workdir ./test/integration/report ./release",
     "convert:api:debug": "ts-node ./examples/node/convert-api-debug.ts",
     "convert:api:local": "ts-node ./examples/node/convert-api-local.ts",
     "prepack": "yarn run build",
