fix package scripts

--- a/packages/octopus-fig/package.json
+++ b/packages/octopus-fig/package.json
@@ -5,15 +5,14 @@
   "license": "Apache-2.0",
   "scripts": {
     "build": "rimraf ./dist && tsc --build tsconfig.json",
+    "bundle": "yarn bundle:node && yarn bundle:web && yarn bundle:web-umd && yarn release:prepare",
     "bundle:node": "vite build -c vite.node.js",
     "bundle:web": "vite build -c vite.web.js",
     "bundle:web-umd": "vite build -c vite.web-umd.js",
-    "bundle": "yarn bundle:node && yarn bundle:web && yarn bundle:web-umd && yarn release:prepare",
-    "release:cleanup": "rimraf ./release",
-    "release:publish": "yarn publish ./release --non-interactive --ignore-scripts",
+    "release": "yarn bundle && yarn release:publish",
     "release:prepare": "node ./prepare-release.mjs",
-    "release": "yarn bundle && yarn release:publish && yarn release:cleanup",
-    "clean": "rimraf ./node_modules ./dist ./workdir ./test/**/report ./release",
+    "release:publish": "yarn publish ./release --non-interactive --ignore-scripts",
+    "clean": "rimraf ./node_modules ./dist ./workdir ./test/**/report ./release/*",
     "clean:workdir": "rimraf ./workdir/*",
     "convert:api:debug": "ts-node ./examples/node/convert-api-debug.ts",
     "convert:api:local": "ts-node ./examples/node/convert-api-local.ts",
