--- a/packages/octopus-ai/package.json
+++ b/packages/octopus-ai/package.json
@@ -12,7 +12,9 @@
     "release:bundle": "yarn release:bundle:node && yarn release:bundle:web",
     "release:cleanup": "rimraf ./release",
     "release:publish": "yarn publish ./release --non-interactive --ignore-scripts",
+    "release:publish:experimental": "yarn publish ./release --non-interactive --ignore-scripts --tag experimental",
     "release": "yarn release:bundle && node ./prepare-release.mjs && yarn release:publish && yarn release:cleanup",
+    "release:experimental": "yarn release:bundle && node ./prepare-release.mjs && yarn release:publish:experimental && yarn release:cleanup",
     "clean:workdir": "rimraf ./workdir/*",
     "clean": "rimraf ./node_modules ./dist ./workdir ./docs",
     "convert:debug": "ts-node ./examples/node/convert-debug.ts",
