--- a/packages/octopus-fig/package.json
+++ b/packages/octopus-fig/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opendesign/octopus-fig",
-  "version": "3.0.0-rc.32-umd",
+  "version": "3.0.0-rc.32-umd-exprelease",
   "description": "Figma HTTP API format to Octopus 3+ converter.",
   "license": "Apache-2.0",
   "scripts": {
