--- a/.github/workflows/build-common.yml
+++ b/.github/workflows/build-common.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-octopus-common:
-    uses: opendesigndev/octopus/.github/workflows/reusable-build.yml@npmjs-ci
-    with: 
+    uses: opendesigndev/octopus/.github/workflows/reusable-build.yml@publish-npm
+    with:
       package-name: '@opendesign/octopus-common'
     secrets: inherit
