--- a/.github/workflows/build-fig.yml
+++ b/.github/workflows/build-fig.yml
@@ -7,8 +7,8 @@ on:
 
 jobs:
   build-octopus-fig:
-    uses: opendesigndev/octopus/.github/workflows/reusable-build.yml@npmjs-ci
-    with: 
+    uses: opendesigndev/octopus/.github/workflows/reusable-build.yml@publish-npm
+    with:
       package-name: '@opendesign/octopus-fig'
       base-version: '3.0.0'
     secrets: inherit
