--- a/.github/workflows/build-psd.yml
+++ b/.github/workflows/build-psd.yml
@@ -7,8 +7,8 @@ on:
 
 jobs:
   build-octopus-psd:
-    uses: opendesigndev/octopus/.github/workflows/reusable-build.yml@npmjs-ci
-    with: 
+    uses: opendesigndev/octopus/.github/workflows/reusable-build.yml@publish-npm
+    with:
       package-name: '@opendesign/octopus-psd'
       base-version: '3.1.0'
     secrets: inherit
