--- a/.github/workflows/build-xd.yml
+++ b/.github/workflows/build-xd.yml
@@ -7,8 +7,8 @@ on:
 
 jobs:
   build-octopus-xd:
-    uses: opendesigndev/octopus/.github/workflows/reusable-build.yml@npmjs-ci
-    with: 
+    uses: opendesigndev/octopus/.github/workflows/reusable-build.yml@publish-npm
+    with:
       package-name: '@opendesign/octopus-xd'
       base-version: '3.0.0'
     secrets: inherit
