--- a/packages/octopus-fig/package.json
+++ b/packages/octopus-fig/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opendesign/octopus-fig",
-  "version": "3.0.0-rc.32-umd",
+  "version": "3.0.0-rc.32-umd-exprelease",
   "description": "Figma HTTP API format to Octopus 3+ converter.",
   "license": "Apache-2.0",
   "scripts": {
@@ -11,8 +11,10 @@
     "bundle": "yarn bundle:node && yarn bundle:web && yarn bundle:web-umd && yarn release:prepare",
     "release:cleanup": "rimraf ./release",
     "release:publish": "yarn publish ./release --non-interactive --ignore-scripts",
+    "release:publish:experimental": "yarn publish ./release --non-interactive --ignore-scripts --tag experimental",
     "release:prepare": "node ./prepare-release.mjs",
     "release": "yarn bundle && yarn release:publish && yarn release:cleanup",
+    "release:experimental": "yarn bundle && yarn release:publish:experimental && yarn release:cleanup",
     "clean": "rimraf ./node_modules ./dist ./workdir ./test/integration/report ./release",
     "clean:workdir": "rimraf ./workdir/*",
     "convert:squid:debug": "ts-node ./examples/node/convert-plugin-squid-debug.ts",
