fix script in octopus-xd

--- a/packages/octopus-xd/package.json
+++ b/packages/octopus-xd/package.json
@@ -7,8 +7,8 @@
     "bundle": "yarn run bundle:web",
     "bundle:web": "vite build -c vite.web-test.js",
     "clean": "rimraf ./node_modules ./dist ./workdir",
-    "convert:all": "ts-node ./examples/node/convert-design.ts",
-    "convert:all:debug": "ts-node ./examples/node/convert-design-debug.ts",
+    "convert:debug": "yarn build && node ./dist/examples/node/convert-debug.js",
+    "convert:local": "yarn build && node ./dist/examples/node/convert-local.js",
     "clean:workdir": "rimraf ./workdir/*",
     "build": "rimraf ./dist && tsc --build tsconfig.json",
     "release:bundle:node": "vite build -c vite.node.js",
