--- a/packages/figma-plugins/common/package.json
+++ b/packages/figma-plugins/common/package.json
@@ -9,8 +9,7 @@
     "test": "echo 'Tests are not implemented yet'",
     "tsc": "tsc --noEmit -p src/main",
     "tsc:watch": "yarn tsc:main -- --watch --preserveWatchOutput",
-    "build": "rimraf ./dist && esbuild src/* --outdir=dist",
-    "build:watch": "yarn build:ui -- --watch"
+    "build": "rimraf ./dist && esbuild src/* --outdir=dist"
   },
   "dependencies": {
     "buffer": "^6.0.3",
@@ -21,15 +20,10 @@
     "@figma/plugin-typings": "1.54.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "concurrently": "^6.3.0",
     "esbuild": "0.15.12",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
-    "typescript": "4.8.4",
-    "vite": "^2.5.2",
-    "vite-plugin-singlefile": "^0.5.1",
-    "vite-svg-loader": "^3.3.0"
+    "typescript": "4.8.4"
   },
   "files": [
     "dist"
