--- a/.github/workflows/build-psd.yml
+++ b/.github/workflows/build-psd.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-octopus-psd:
-    uses: opendesigndev/octopus/.github/workflows/reusable-build.yml@publish-npm
+    uses: opendesigndev/octopus/.github/workflows/reusable-build.yml@main
     with:
       package-name: '@opendesign/octopus-psd'
       base-version: '3.1.0'
