--- a/packages/figma-plugins/preview-exporter/package.json
+++ b/packages/figma-plugins/preview-exporter/package.json
@@ -15,7 +15,7 @@
     "build:main": "esbuild src/main/index.ts --bundle --outfile=dist/main.js",
     "build:ui": "vite build --minify esbuild --emptyOutDir=false",
     "build:watch": "concurrently -n widget,iframe \"yarn build:main -- --watch\" \"yarn build:ui -- --watch\"",
-    "dev": "concurrently -n tsc,build,vite 'npm:tsc:watch' 'npm:build:watch' 'vite'"
+    "dev": "concurrently -n tsc,build,vite 'yarn:tsc:watch' 'yarn:build:watch' 'vite'"
   },
   "dependencies": {
     "@opendesign/figma-plugin-common": "3.0.0-rc.1",
@@ -39,5 +39,6 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "main": "dist/main.js"
 }
