--- a/packages/figma-parser-s3-plugin/package.json
+++ b/packages/figma-parser-s3-plugin/package.json
@@ -18,14 +18,15 @@
     "dotenv": "16.0.0",
     "lodash": "^4.17.21",
     "pino": "^6.7.0",
-    "pino-pretty": "^4.3.0"
+    "pino-pretty": "^4.3.0",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "@types/node": "*",
-    "ts-node": "10.5.0",
-    "typescript": "4.6.4",
     "@types/pino-pretty": "4.7.5",
-    "@types/pino-std-serializers": "2.4.1"
+    "@types/pino-std-serializers": "2.4.1",
+    "ts-node": "10.5.0",
+    "typescript": "4.6.4"
   },
   "files": [
     "lib/src"
