--- a/packages/figma-plugins/common/src/main/tsconfig.json
+++ b/packages/figma-plugins/common/src/main/tsconfig.json
@@ -5,6 +5,6 @@
     "strict": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "typeRoots": ["node_modules/@figma"]
+    "typeRoots": ["../../node_modules/@figma"]
   }
 }
